TestSuite/errors/err0360_InherFromOnlyDeclClasses.pas
type
  t0<T> = class end;
  
  A = class;
  B = class(t0<A>)
    
  end;
  A = class
    
  end;
  
begin 
end.